--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,11 +53,11 @@
           </ul>
           <% if user_signed_in? %>
             <% if current_user.name != nil then %>
-              <a style="float:right;" class="navbar-brand" href="<%= destroy_user_session_path %>"><span class="fa fa-sign-out"></span></a>
+              <a style="float:right;" class="navbar-brand" href="<%= destroy_user_session_path %>" data-method="delete"><span class="fa fa-sign-out"></span></a>
               <div style="float:right;" class="navbar-brand"><%= current_user.name %></div>
               <a style="float:right;" class="navbar-brand" href="<%= edit_user_registration_path %>"><span class="fa fa-user"></span></a>
             <% else %>
-              <a style="float:right;" class="navbar-brand" href="<%= destroy_user_session_path %>"><span class="fa fa-sign-out"></span></a>
+              <a style="float:right;" class="navbar-brand" href="<%= destroy_user_session_path %>" data-method="delete"><span class="fa fa-sign-out"></span></a>
               <div style="float:right;" class="navbar-brand"><%= current_user.email %></div>
               <a style="float:right;" class="navbar-brand" href="<%= edit_user_registration_path %>"><span class="fa fa-user"></span></a>
             <% end %>
