--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,132 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<link rel="shortcut icon" href="ico/favicon.ico">
+
+<title>NYC - Design Studio</title>
+
+<!-- Custom styles for this template -->
+<link href="css/style.css" rel="stylesheet">
+<link href="css/font-awesome.min.css" rel="stylesheet">
+<link href="js/fancybox/jquery.fancybox.css" rel="stylesheet" />
+
+
+<section id="home" name="home"></section>
+	<div id="headerwrap">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3">
+					<h1>TOUR GUIDE MATCHING</h1>
+				</div>
+			</div><! --/row -->
+		</div><! --/container -->
+	</div><! --/headerwrap -->
+	
+	<section id="about" name="about"></section>
+	<div id="aboutwrap">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4 name">
+					<img class="img-responsive" src="img/olympic_logo.png" width="200px" float="right">
+				</div><! --/col-lg-4-->
+				<div class="col-lg-8 name-desc">
+					<h2>TOUR GUIDE MATCHING</h2>
+					<h2>FOR 2020 TOKYO OLMPIC</h2>
+					<div class="name-zig"></div>
+					
+					<div class="col-md-12">
+						<p>2020年の東京五輪では観光客の増加が見込まれますが、通訳者の数には限界があります。</p>
+						<p>我々は、外国語を話すことができる人々と観光客をマッチングすることによってこの課題にチャレンジします。</p>
+					</div>
+					
+				</div><! --/col-lg-8-->
+		
+			</div><!-- /row -->
+		</div><!-- /container -->
+	</div><!-- /aboutwrap -->
+	
+	<! -- ABOUT SEPARATOR -->
+	<div class="sep about" data-stellar-background-ratio="0.5"></div>
+	
+	<! -- PORTFOLIO SECTION -->
+	<section id="portfolio" name="portfolio"></section>
+	<div id="portfoliowrap">
+		<div class="container">
+			<div class="row mt centered">
+				<h1>HOW TO USE</h1>
+				<div class="col-lg-6 proc">
+					<img class="img-responsive" src="img/ask.png" width="25px" style="display:block;margin-left:auto;margin-right:auto;">
+					<h3>ASK</h3>
+					<p>観光案内ができる方は、観光案内ができる場所、日時を<Strong>Ask</Strong>に登録して下さい。</p>
+					<p>Bid側の方に選択されると一覧に表示されるので、確認したら確認ボタンを押して下さい。</p>
+				</div>
+				<div class="col-lg-6 proc">
+					<i class="fa fa-legal"></i>
+					<h3>BID</h3>
+					<p>観光案内して欲しい方は、観光案内をして欲しい場所、日時を<Strong>Bid</Strong>に登録して下さい。</p>
+					<p>その後、"MATCH"ボタンを押し、検索結果から適切なAskを選択して下さい。</p>
+					<p>Ask側の方が確認したらマッチング成立です。</p>
+				</div>
+			</div><! --/row -->
+		</div><! --/container -->
+	</div><! --/Portfoliowrap -->
+	
+	<! -- SERVICE SECTION -->
+	<section id="contact" name="contact"></section>
+	<! -- CONTACT SEPARATOR -->
+	<div class="sep contact" data-stellar-background-ratio="0.5"></div>
+	
+	<div id="contactwrap">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6">
+					<p>CONTACT ME RIGHT NOW!</p>
+					<p></p>
+					<p>
+					    Address
+					</p>
+					<p>
+						Tel&Email
+					</p>
+			
+				</div>
+				
+				<div class="col-lg-5">
+					<form role="form">
+					  <div class="form-group">
+					    <label for="exampleInputName1">Your Name</label>
+					    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter name">
+					    <label for="exampleInputEmail1">Email address</label>
+					    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+					    <label for="exampleInputText1">Message</label>
+					    <textarea class="form-control" rows="3"></textarea>
+					  </div>
+					  <button type="submit" class="btn btn-default">Submit</button>
+					</form>
+				</div>
+			
+			</div><! --/row -->
+		</div><!-- /container -->
+	</div>
+	
+	<!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+	<script src="js/classie.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/smoothscroll.js"></script>
+	<script src="js/jquery.stellar.min.js"></script>
+	<script src="js/fancybox/jquery.fancybox.js"></script>    
+	<script src="js/main.js"></script>
+		<script>
+		$(function(){
+			$.stellar({
+				horizontalScrolling: false,
+				verticalOffset: 40
+			});
+		});
+		</script>
+		
+		<script type="text/javascript">
+      $(function() {
+        //    fancybox
+          jQuery(".fancybox").fancybox();
+      });
+	   </script>
